objects/Affilation__c.object
<CustomObject>
    <fields>
        <fullName>Account_Integration_Target_Affiliation__c</fullName>
        <formula>AND(
Account__r.Account_Integration_Target__c=TRUE,
Contact__r.GRO_Tool__c=TRUE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TRUE if both the account and contact are Account Integration Targets</inlineHelpText>
        <label>Account Integration Target-Affiliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Qualified__c</fullName>
        <formula>Account__r.Qualified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Search__c</fullName>
        <externalId>true</externalId>
        <label>Account Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Affilations</relationshipLabel>
        <relationshipName>Affilations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_in_LIMS__c</fullName>
        <formula>NOT(ISBLANK(Account__r.Sent_to_LIMS__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account in LIMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliated_Fax__c</fullName>
        <label>Affiliated Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Affiliation_Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliation Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Username__c</fullName>
        <label>Affiliation Username</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Search__c</fullName>
        <externalId>true</externalId>
        <label>Contact Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Affilations</relationshipLabel>
        <relationshipName>Affilations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delivery_Report_Type__c</fullName>
        <label>Delivery Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Portal and Fax</fullName>
                </value>
                <value>
                    <fullName>Fax &amp; Portal</fullName>
                    <isActive>false</isActive>
                    <label>Fax &amp; Portal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NY_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New York Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Long_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Long Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Treatment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Needs Treatment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Case__c</fullName>
        <formula>HYPERLINK(&apos;/setup/ui/recordtypeselect.jsp?ent=Case&amp;retURL=%2F&apos; &amp; Account__r.Id &amp; &apos;&amp;save_new_url=%2F500%2Fe%3FretURL%3D%252F&apos; &amp; Account__r.Id &amp; &apos;%26def_contact_id%3D&apos; &amp; Contact__r.Id &amp; &apos;%26def_account_id%3D&apos; &amp; Account__r.Id, &apos;New Case&apos; , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_NPI_No__c</fullName>
        <formula>Contact__r.NPI_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other NPI No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Trial : ROW</fullName>
                </value>
                <value>
                    <fullName>Clinical Trial : US</fullName>
                </value>
                <value>
                    <fullName>DirectBill : US</fullName>
                </value>
                <value>
                    <fullName>Distributors : ROW</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Clinical Utility</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - LUNAR</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Pharma</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Proficiency</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Promotional</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Quality Testing</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - ROW</fullName>
                </value>
                <value>
                    <fullName>Financial Indigent</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharma : ROW</fullName>
                </value>
                <value>
                    <fullName>Pharma : US</fullName>
                </value>
                <value>
                    <fullName>Private Insurance/Employee Health Plan</fullName>
                </value>
                <value>
                    <fullName>Private Insurance/Employee Health Plan No OOP</fullName>
                </value>
                <value>
                    <fullName>Research : ROW</fullName>
                </value>
                <value>
                    <fullName>Research : US</fullName>
                </value>
                <value>
                    <fullName>Self-Pay Patient</fullName>
                </value>
                <value>
                    <fullName>Self-Pay Sponsored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_User_Name__c</fullName>
        <label>Portal User Name</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Push_to_Labvantage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push to Labvantage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified_AF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified AF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified_to_send_to_LIMS__c</fullName>
        <formula>Contact__r.Qualified_to_send_to_LIMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula derived from the Contact&apos;s &apos;Qualified to Send to LIMS&apos; field</inlineHelpText>
        <label>Qualified to send to LIMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sent_to_LIMS__c</fullName>
        <label>Sent to LIMS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Affilation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Needs_Treatment__c</columns>
        <columns>Delivery_Report_Type__c</columns>
        <columns>Portal_User_Name__c</columns>
        <columns>Physician_Billing_Type__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Qualified_AF__c</columns>
        <columns>Qualified_to_send_to_LIMS__c</columns>
        <columns>Sent_to_LIMS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Qualified_AF</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_in_LIMS__c</columns>
        <columns>Contact__c</columns>
        <columns>Delivery_Report_Type__c</columns>
        <columns>Needs_Treatment__c</columns>
        <columns>Portal_User_Name__c</columns>
        <columns>Push_to_Labvantage__c</columns>
        <columns>Qualified_to_send_to_LIMS__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Qualified_AF__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Qualified AF</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AF-{000000000}</displayFormat>
        <label>Affilation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affilations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Delivery_and_BillingType_Required</fullName>
        <active>true</active>
        <description>NS:07/20/18 When ‘Qualified AF’ is checked then Delivery Report Type and Billing Type cannot be blank.</description>
        <errorConditionFormula>AND(Qualified_AF__c = TRUE,
OR
( 
ISBLANK(TEXT( Physician_Billing_Type__c ) ),
 ISBLANK( TEXT(Delivery_Report_Type__c) )
))</errorConditionFormula>
        <errorDisplayField>Physician_Billing_Type__c</errorDisplayField>
        <errorMessage>Please select the values for Delivery Report Type &amp; Billing Type</errorMessage>
    </validationRules>
</CustomObject>